--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,8 +18,8 @@ main:
 # sidebar navigation (categories)
 # 2022.02.15 sidebar update : simple ver.
 categories:
-  - title: "Categories1"
-    url: /categories/categories1/
+  - title: "Java"
+    url: /categories/Java/
   - title: "Categories2"
     url: /categories/categories2/
   - title: "Categories3"
