Java category를 Language category의 children으로 변경

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,8 +18,11 @@ main:
 # sidebar navigation (categories)
 # 2022.02.15 sidebar update : simple ver.
 categories:
-  - title: "Java"
-    url: /categories/Java/
+  - title: "Language"
+    children:
+    - title: "Java"
+      url: /categories/Java/
+      
   - title: "Categories2"
     url: /categories/categories2/
   - title: "Categories3"
